--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -14,6 +14,10 @@ body {
     font: Helvetica, Arial, sans-serif;
 }
 
+.wip {
+    color: maroon;
+}
+
 
 /*
 ========================================
