Saved css file tweak.

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -149,7 +149,11 @@ tbody td {
     display: none;
 }
 
-.fare-alert {
+.fare-overpriced {
+    color: default;
+}
+
+.fare-breakeven {
     color: default;
 }
 
